--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "sass": "sass --watch --no-source-map --style=compressed src/styles/sass:src/styles/"
   },
   "dependencies": {
     "react": "^18",
